5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4177/executions/1667_2327.log
== TEST (2019-04-16 16:10:03) 
-- CODE:
numero=input(" o nome do bruxo: ")
if (numero == "GINA"):
   f= 3.7654/2.3479
else
   f= 3.674/2.789
print(f)	
-- ERROR:
File "XXXX", line 4
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:10:20) 
-- CODE:
numero=input(" o nome do bruxo: ")
if (numero == "GINA"):
   f= 3.7654/2.3479
else:
   f= 3.674/2.789
print(f)	
-- OUTPUT:
1.3173180351380422
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:11:05) 
-- CODE:
numero=input(" o nome do bruxo: ")
if (numero == "HERMIONE"):
   f= 3.7654/2.3479
else:
   f= 3.674/2.789
print(f)	
-- OUTPUT:
1.3173180351380422
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:11:21) 
-- CODE:
numero=input(" o nome do bruxo: ")
if (numero == "HERMIONE"):
   f= 3.7654/2.3479
else:
   f= 3.674/2.789
print(f)	
-- EXECUTION TIME:
0.121974
-- TEST CASE 1:
---- input:
hermione
---- correct output:
1.6037309936539035
---- user output:
1.3173180351380422
-- TEST CASE 2:
---- input:
gina
---- correct output:
1.3173180351380422
---- user output:
1.3173180351380422
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:11:54) 
-- CODE:
numero=input(" o nome do bruxo: ").lower()
if (numero == "HERMIONE"):
   f= 3.7654/2.3479
else:
   f= 3.674/2.789
print(f)	
-- OUTPUT:
1.3173180351380422
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:12:22) 
-- CODE:
numero=input(" o nome do bruxo: ") .lower()
if (numero == "HERMIONE"):
   f= 3.7654/2.3479
else:
   f= 3.674/2.789
print(f)	
-- OUTPUT:
1.3173180351380422
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:13:04) 
-- CODE:
numero=input(" o nome do bruxo: ") .lower()
if (numero == "HERMIONE"):
   f= 3.7654/2.3479
else:
   f= 3.674/2.789
print(f)	
-- OUTPUT:
1.3173180351380422
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:13:58) 
-- CODE:
numero=input(" o nome do bruxo: ") .lower()
if (numero == "GINA"):
   f= 3.7654/2.3479
else:
   f= 3.674/2.789
print(f)	
-- OUTPUT:
1.3173180351380422
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:15:28) 
-- CODE:
numero=input(" o nome do bruxo: ").lower()
if (numero == "GINA"):
   f= 3.7654/2.3479
else:
   f= 3.674/2.789
print(f)	
-- OUTPUT:
1.3173180351380422
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:17:11) 
-- CODE:
numero=input(" o nome do bruxo: ").lower()
if (numero == "GINA"):
   f= 37654/23479
else:
   f= 3674/2789
print(f)	
-- OUTPUT:
1.3173180351380422
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:17:51) 
-- CODE:
numero=input(" o nome do bruxo: ").lower()
if (numero == "GINA"):
   f= 3.7654/2.3479
else:
   f= 3.674/2.789
print(f)	
-- OUTPUT:
1.3173180351380422
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:19:11) 
-- CODE:
numero=input(" o nome do bruxo: ").lower()
if (numero == "GINA"):
   f= 3.7654/2.3479
else:
   f= 3.674/2.789
print(f)
-- OUTPUT:
1.3173180351380422
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:20:05) 
-- CODE:
numero=input(" o nome do bruxo: ").lower()
if (numero == "GINA"):
   f= 3.7654/2.3479
else:
   f= 3.674/2.789
print(f)
-- OUTPUT:
1.3173180351380422
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:21:08) 
-- CODE:
numero=input(" o nome do bruxo: ").lower()
if (numero == "HERMIONE"):
   f= 3.7654/2.3479
else:
   f= 3.674/2.789
print(f)
-- OUTPUT:
1.3173180351380422
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:21:24) 
-- CODE:
numero=input(" o nome do bruxo: ").lower()
if (numero == "HERMIONE"):
   f= 3.7654/2.3479
else:
   f= 3.674/2.789
print(f)
-- OUTPUT:
1.3173180351380422
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:21:42) 
-- CODE:
numero=input(" o nome do bruxo: ").lower()
if (numero == "hermione"):
   f= 3.7654/2.3479
else:
   f= 3.674/2.789
print(f)
-- OUTPUT:
1.6037309936539035
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:22:06) 
-- CODE:
numero=input(" o nome do bruxo: ").lower()
if (numero == "hermione"):
   f= 3.7654/2.3479
else:
   f= 3.674/2.789
print(f)
-- EXECUTION TIME:
0.133879
-- TEST CASE 1:
---- input:
hermione
---- correct output:
1.6037309936539035
---- user output:
1.6037309936539035
-- TEST CASE 2:
---- input:
gina
---- correct output:
1.3173180351380422
---- user output:
1.3173180351380422
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
